@@ -26,19 +26,17 @@ Description: Compiler for Linux on x86 (meta-package)
  for Linux on amd64, i386 and x32.
 
 Package: linux-image-parisc64-smp
-X-Version-Overwrite-Epoch: 1
 Architecture: hppa
-Section: base
+Section: oldlibs
 Priority: extra
-Depends: linux-image-parisc64
-Description: Linux for multiprocessor 64-bit PA-RISC - transition package
- This package is for transition only.
+Depends: linux-image-parisc64, ${misc:Depends}
+Description: Linux for multiprocessor 64-bit PA-RISC (dummy package)
+ This is a dummy transitional package.  It can be safely removed.
 
 Package: linux-image-parisc-smp
-X-Version-Overwrite-Epoch: 1
 Architecture: hppa
-Section: base
+Section: oldlibs
 Priority: extra
-Depends: linux-image-parisc
-Description: Linux for multiprocessor 32-bit PA-RISC - transition package
- This package is for transition only.
+Depends: linux-image-parisc, ${misc:Depends}
+Description: Linux for multiprocessor 32-bit PA-RISC (dummy package)
+ This is a dummy transitional package.  It can be safely removed.
