@@ -38,6 +38,7 @@ linux (5.8-1~exp1) UNRELEASED; urgency=medium
   [ Ben Hutchings ]
   * [x86] hyperv-daemons: Complete renaming of init scripts
   * [x86] hyperv-daemons: Correct old names in Conflicts field of unit files
+  * [hppa] Use standard metadata for transitional packages
 
  -- Yves-Alexis Perez <corsac@debian.org>  Wed, 24 Jun 2020 21:58:24 +0200
 
